--- a/style.css
+++ b/style.css
@@ -19,8 +19,13 @@ body {
 }
 
 h1 {
-    text-align: center;
-    margin-top: 30px;
+    tposition: relative;
+    background-color: rgba(0, 0, 0, 1);
+    color: rgb(255, 255, 255);
+    padding: 0.5em;
+    margin-bottom: 0.3em;
+    font-size: 1.5rem;
+    border-radius: 0.25em;
 }
 
 form {
@@ -107,12 +112,6 @@ li button {
     }
 }
 
-@media only screen and (max-width: 700px) {
-    .container {
-        width: 70%;
-    }
-}
-
 /* For screens larger than 768px (desktop) */
 @media only screen and (min-width: 768px) {
     form {
@@ -127,4 +126,10 @@ li button {
         max-width: 800px;
     }
 
+}
+
+@media only screen and (max-width: 700px) {
+    .container {
+        width: 70%;
+    }
 }
