--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 h1 {
-    tposition: relative;
+    position: relative;
     background-color: rgba(0, 0, 0, 1);
     color: rgb(255, 255, 255);
     padding: 0.5em;
@@ -93,6 +93,11 @@ li button {
 @media only screen and (max-width: 480px) {
     form {
         flex-direction: column;
+    }
+
+    input {
+        margin-left: 7.5px;
+        width: 100%;
     }
 
     input[type="text"] {
